Carousel image width at 100% for image responsiveness. Bug at arrow alignment.

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,7 +7,16 @@
 .introduction{
   min-height: 640px;
   padding-top: 30px;
+
+}
+
+#carouseltop{
+  padding-top: 30px;
+  max-height: 640px;
   overflow: hidden;
+//  margin: 0 auto 0 auto;
+  display: block;
+
 }
 
 .carousel,.item, .active{
@@ -21,10 +30,19 @@
 
 }
 
+.carousel-caption >h1,h2,h3{
+  margin-bottom: 300!important;
+}
+
+.carousel-indicators{
+  margin-bottom: 300!important;
+}
+
 ///nacommentout yun use nito sa home.html
 .fill{
-  height: 100%;
-  width:  100%;
+  // height: 100%;
+  // width:  100%;
+  //
   background-image: url(static/bluelb3.jpeg);
   background-position: center;
   -webkit-background-size: cover;
